--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -13,5 +13,6 @@
  *= require_tree .
  *= require_self
  */
-
+ 
+ @import url('https://fonts.googleapis.com/css?family=Arvo:700');
  @import "bootstrap";
